tests/invalid/mostly_uniq2.err_exp
mostly_uniq2.m:009: In `foo'(di, uo):
mostly_uniq2.m:009:   error: invalid determinism for a predicate with I/O state
mostly_uniq2.m:009:   arguments.
mostly_uniq2.m:017: In clause for `foo(di, uo)':
mostly_uniq2.m:017:   in argument 2 of call to predicate `io.write_int'/3:
mostly_uniq2.m:017:   mode error: variable `STATE_VARIABLE_IO_0' has
mostly_uniq2.m:017:   instantiatedness `mostly_unique',
mostly_uniq2.m:017:   expected instantiatedness was `unique'.
mostly_uniq2.m:017:   This kind of uniqueness mismatch is usually caused by
mostly_uniq2.m:017:   doing input/output or some other kind of destructive
mostly_uniq2.m:017:   update in a context where it can be backtracked over,
mostly_uniq2.m:017:   such as the condition of an if-then-else.
For more information, recompile with `-E'.
